<resources>

    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar" />

    <string name="app_name">Demo_App</string>
    <string name="task1">Task1</string>
    <string name="task2">Task2</string>
    <string name="task3">Task3</string>
    <string name="fragment1">Fragment1</string>
    <string name="fragment2">Fragment2</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="go_back">Go Back</string>
    <string name="semester_exams">Semester Exams</string>
    <string name="mid_exams">Mid Exams</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="Departments">
        <item>Cse</item>
        <item>Ece</item>
        <item>Mech</item>
        <item>IT</item>
        <item>EEE</item>
        <item>Civil</item>
        <item>Chem</item>
    </string-array>

    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />

    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="enter_your_name">enter_your_name</string>
    <string name="welcome_to_mvgr">Welcome to Mvgr</string>
    <string name="move_to_nxt_actv">Move to Nxt Actv</string>
    <string name="upload_a_file">Upload a File</string>
    <string name="empty_text">Empty Text</string>
    <string name="welcome_to_second_activity">Welcome to Second Activity</string>
    <string name="download_file">Download File</string>
</resources>