<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#673AB7"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_mvgr"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/tv"
            app:layout_constraintStart_toStartOf="@+id/tv"
            app:layout_constraintTop_toBottomOf="@+id/tv"
            tools:ignore="Autofill" />


        <Spinner
            android:id="@+id/spinnerid"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:background="#FFC107"
            android:entries="@array/Departments"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/tv"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B8B2B2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="300dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@+id/tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tablayout" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_nav" />

        <FrameLayout
            android:id="@+id/fragLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerid"
            app:layout_constraintVertical_bias="0.909">

        </FrameLayout>


        <Button
            android:id="@+id/NotifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/notifications"
            app:layout_constraintBottom_toBottomOf="@+id/tonxtBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tonxtBtn"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/tonxtBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="30dp"
            android:text="@string/move_to_nxt_actv"
            app:layout_constraintBottom_toTopOf="@+id/fragLayout"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.916"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/CamBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Camera Permission"
            app:layout_constraintBottom_toBottomOf="@+id/tonxtBtn"
            app:layout_constraintEnd_toStartOf="@+id/NotifyBtn"
            app:layout_constraintStart_toEndOf="@+id/tonxtBtn"
            app:layout_constraintTop_toTopOf="@+id/tonxtBtn" />

        <TextView
            android:id="@+id/urltv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv"
            app:layout_constraintEnd_toStartOf="@+id/tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv" />

        <Button
            android:id="@+id/uploadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_a_file"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />
        <Button
            android:id="@+id/downloadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_file"
            app:layout_constraintEnd_toEndOf="@+id/uploadBtn"
            app:layout_constraintStart_toStartOf="@+id/uploadBtn"
            app:layout_constraintTop_toBottomOf="@+id/uploadBtn" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/slidable_list" />


</androidx.drawerlayout.widget.DrawerLayout>








